--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,7 @@
 		</dependencies>
 	</dependencyManagement>
 <packaging>pom</packaging>
+	<modules>
+		<module>analyzer</module>
+	</modules>
 </project>
